[package]
name = "aidoku-source-meshmanga"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", branch = "main", features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
